--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  role_name: dosbox-gog
   author: Richard Gibert
   description: Install GOG games that run under DOSbox
   license: GPLv3
